--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,22 +1,114 @@
-.App {
-  text-align: center;
+@import url('https://fonts.googleapis.com/css?family=Montserrat&display=swap');
+
+body {
+  background:
+    linear-gradient(0deg,rgba(87,6,140,0.9),rgba(87,6,140,0.9)),
+    url('https://img.wallpapersafari.com/desktop/1920/1080/37/80/mHCT7n.jpg');
+  background-size:contain;
+  background-position: center;
 }
 
-.App-logo {
-  height: 40vmin;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
+.form-container{
+  margin: auto;
+  width: 100%;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  display: flex;
 }
 
-.App-link {
-  color: #09d3ac;
+.registerForm{
+  font-family: 'Montserrat', sans-serif;
+  color:white;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  margin: 50px 0;
+}
+
+.form-group{
+  margin: 30px 0;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+
+.form-control{
+  background: none;
+  border-bottom: 1px solid white;
+  border-top:none ;
+  border-left: none;
+  border-right: none;
+  padding: 10px 30px 10px 30px;
+  width: 100%;
+}
+
+/* .form-label{
+  position: absolute;
+} */
+
+.form-radio{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  margin: 10px 0 10px 0;
+}
+
+input[type="radio"]:not(old) {
+    background-color: transparent;
+}
+
+input[type="submit"] {
+  border: none;
+  font-family: 'Montserrat', sans-serif;
+  color:white;
+  letter-spacing: 1px;
+  color:white;
+  background-color: #330662;
+  border-style: none;
+  text-align: center;
+  width: 100%;
+  padding: 20px 50px;
+  margin: 20px 0 30px 0;
+}
+
+input[type="submit"]:hover{
+  font-weight: bold;
+  background-color:  #8900e1;
+  transition: 300ms ease;
+}
+
+.course-page{
+  font-family: 'Montserrat', sans-serif;
+  color: white;
+  padding: 50px;
+  margin: 30px 20px 30px  20px;
+  display: flex;
+  flex-direction: column;
+}
+
+.course-card{
+  margin: 50px;
+  background-color: rgba(242,242,242,0.5);
+  padding: 40px  50px 40px 50px;
+  border-radius: 25px;
+}
+
+.course-card:hover{
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  margin-top: 30px;
+  background-color: rgba(242,242,242,0.6);
+  transition: 300ms ease;
+}
+
+.metaData{
+  display: flex;
+  flex-direction: row;
+}
+
+.metaInfo{
+  margin-right:20px ;
+  padding-right: 20px;
+  font-weight: bolder;
+  border-right: 1px solid white;
 }
