--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -27,35 +27,290 @@ body {
 }
 
 .form-group{
-  margin: 30px 0;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
+  position:relative; 
+  margin-bottom:45px; 
 }
 
 .form-control{
   background: none;
-  border-bottom: 1px solid white;
+  border-bottom: 1px solid #f2f2f2;
   border-top:none ;
   border-left: none;
   border-right: none;
-  padding: 10px 30px 10px 30px;
-  width: 100%;
+  font-size:18px;
+  padding:10px 10px 10px 5px;
+  width:300px;
 }
 
-/* .form-label{
-  position: absolute;
-} */
+.form-control:focus,.form-control:valid {
+  color: white;
+  outline:none;
+}
 
-.form-radio{
+.form-label{
+  color:#f2f2f2; 
+  font-weight: bold;
+  font-size:18px;
+  position:absolute;
+  pointer-events:none;
+  left:5px;
+  top:10px;
+  transition:0.2s ease all; 
+  -moz-transition:0.2s ease all; 
+  -webkit-transition:0.2s ease all;
+}
+
+input:focus ~ label, input:valid ~ label 		{
+  top:-20px;
+  font-size:14px;
+  color: white;
+  font-weight: normal;
+}
+
+.bar 	{ position:relative; display:block; width:315px; }
+.bar:before, .bar:after 	{
+  content:'';
+  height:2px; 
+  width: 0;
+  bottom:0.5px; 
+  position:absolute;
+  background:white; 
+  transition:0.2s ease all; 
+  -moz-transition:0.2s ease all; 
+  -webkit-transition:0.2s ease all;
+}
+.bar:before {
+  left:50%;
+}
+.bar:after {
+  right:50%; 
+}
+
+input:focus ~ .bar:before, input:focus ~ .bar:after {
+  width:50%;
+}
+
+.highlight {
+  position:absolute;
+  height:60%; 
+  width:300px; 
+  top:25%; 
+  left:0;
+  pointer-events:none;
+  opacity:0.5;
+}
+
+input:focus ~ .highlight {
+  -webkit-animation:inputHighlighter 0.3s ease;
+  -moz-animation:inputHighlighter 0.3s ease;
+  animation:inputHighlighter 0.3s ease;
+}
+
+@-webkit-keyframes inputHighlighter {
+	from { background:#8900e1; }
+  to 	{ width:0; background:transparent; }
+}
+@-moz-keyframes inputHighlighter {
+	from { background:#8900e1; }
+  to 	{ width:0; background:transparent; }
+}
+@keyframes inputHighlighter {
+	from { background:#8900e1; }
+  to 	{ width:0; background:transparent; }
+}
+
+.form-radio-group{
   display: flex;
-  flex-direction: row;
-  justify-content: space-evenly;
-  margin: 10px 0 10px 0;
+  margin: 10px 0 20px 0;
 }
 
-input[type="radio"]:not(old) {
-    background-color: transparent;
+.gender{
+  font-size: 18px;
+  font-weight: bold;
+  padding-left:5px;
+  margin-bottom: 10px;
+}
+
+.form-radio-label{
+  margin-right: 20px;
+  position: relative;
+  cursor: pointer;
+  padding-left: 25px;
+  text-align: left;
+  color: white;
+}
+
+.form-radio-label:hover i {
+  color: #8900e1;
+}
+
+.form-radio-label input {
+  width: auto;
+  opacity: 0.0001;
+  position: absolute;
+  left: 0.25rem;
+  top: 0.25rem;
+  margin: 0;
+  padding: 0;
+}
+
+.form-radio-button {
+  position: absolute;
+  left: 0;
+  cursor: pointer;
+  display: block;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  color: #f2f2f2;
+}
+
+.form-radio-button::before,
+.form-radio-button::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 1rem;
+  height: 1rem;
+  transition: transform 0.28s ease, color 0.28s ease;
+  border-radius: 50%;
+  border: 0.125rem solid currentColor;
+  will-change: transform, color;
+}
+
+.form-radio-button::after {
+  transform: scale(0);
+  background-color: white;
+  border-color: none;
+}
+
+.form-radio-field:checked ~ .form-radio-button::after {
+  transform: scale(0.5);
+}
+
+.form-radio-field:checked ~ .form-radio-button::before {
+  color: white;
+}
+
+.form-select {
+  position: relative;
+  margin-top:45px;
+  margin-bottom:45px;
+  width: 300px;
+}
+
+.form-element-bar {
+  position: relative;
+  height: 1px;
+  background: #f2f2f2;
+  display: block;
+}
+
+.form-element-bar::after {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background: white;
+  height: 1.5px;
+  display: block;
+  transform: rotateY(90deg);
+  transition: transform 0.28s ease;
+  will-change: transform;
+}
+
+.form-element-label {
+  position: absolute;
+  top:10px;
+  line-height: 1.5rem;
+  pointer-events: none;
+  padding-left: 5px;
+  z-index: 1;
+  font-size: 18px;
+  font-weight: bold;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  margin: 0;
+  color: #f2f2f2;
+  transform: translateY(-50%);
+  transform-origin: left center;
+  transition: transform 0.28s ease, color 0.28s linear, opacity 0.28s linear;
+  will-change: transform, color, opacity;
+}
+
+.form-element-field {
+  outline: none;
+  display: block;
+  background: none;
+  padding: 0.125rem 0.125rem 0.0625rem;
+  font-size: 18px;
+  border: 0 solid transparent;
+  line-height: 1.5;
+  width: 100%;
+  color: white;
+  box-shadow: none;
+  opacity: 0.001;
+  transition: opacity 0.28s ease;
+  will-change: opacity;
+}
+
+.form-element-field::placeholder {
+  color: #a6a6a6;
+  transform: scale(0.9);
+  transform-origin: left top;
+}
+
+.form-element-field:focus ~ .form-element-bar::after {
+  transform: rotateY(0deg);
+}
+
+.form-element-field:focus {
+  opacity: 1;
+}
+
+.form-element-field:focus ~ .form-element-label {
+  transform: translateY(-100%) translateY(-0.5em) translateY(-2px) scale(0.9);
+  cursor: pointer;
+  pointer-events: auto;
+  font-weight: normal;
+  color: white;
+}
+
+.form-element-bar::after {
+  background: white;
+}
+
+select.form-element-field {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  cursor: pointer;
+}
+
+.form-select .form-element-bar::before {
+  content: "";
+  position: absolute;
+  height: 0.5em;
+  width: 0.5em;
+  border-bottom: 1px solid #f2f2f2;
+  border-right: 1px solid #f2f2f2;
+  display: block;
+  right: 0.5em;
+  bottom: 0;
+  transition: transform 0.28s ease;
+  transform: translateY(-100%) rotateX(0deg) rotate(45deg);
+  will-change: transform;
+}
+
+.form-select select:focus ~ .form-element-bar::before {
+  transform: translateY(-50%) rotateX(180deg) rotate(45deg);
 }
 
 input[type="submit"] {
@@ -74,6 +329,7 @@ input[type="submit"] {
 
 input[type="submit"]:hover{
   font-weight: bold;
+  font-size: 14px;
   background-color:  #8900e1;
   transition: 300ms ease;
 }
