--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -23,7 +23,7 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: flex-start;
-  margin: 50px 0;
+  margin: 100px 0;
 }
 
 .form-group{
@@ -367,4 +367,16 @@ input[type="submit"]:hover{
   padding-right: 20px;
   font-weight: bolder;
   border-right: 1px solid white;
+}
+
+.login{
+  text-align: center;
+}
+
+a:link {color: white;text-decoration: none;}
+a:visited {color: #220337;text-decoration: underline;}
+a:hover {color: white;text-decoration: underline;}
+a:active {
+  color: #330662;
+text-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
