--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -8,12 +8,16 @@ body {
   background-position: center;
 }
 
-.form-container{
+.form-container,.form-container-login{
   margin: auto;
   width: 100%;
   align-items: center;
   justify-content: center;
   display: flex;
+}
+
+.form-container-login{
+  margin-top: 50px;
 }
 
 .registerForm{
@@ -23,7 +27,7 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: flex-start;
-  margin: 100px 0;
+  margin: 50px 0;
 }
 
 .form-group{
@@ -324,7 +328,7 @@ input[type="submit"] {
   text-align: center;
   width: 100%;
   padding: 20px 50px;
-  margin: 20px 0 30px 0;
+  margin: 20px 30px 30px 0;
 }
 
 input[type="submit"]:hover{
@@ -369,14 +373,18 @@ input[type="submit"]:hover{
   border-right: 1px solid white;
 }
 
-.login{
-  text-align: center;
-}
-
 a:link {color: white;text-decoration: none;}
 a:visited {color: #220337;text-decoration: underline;}
 a:hover {color: white;text-decoration: underline;}
 a:active {
   color: #330662;
 text-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+.reg-log{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: baseline;
+  width: 100%;
 }
