--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -54,6 +54,80 @@ body {
   outline:none;
 }
 
+.form-radio-group{
+  display: flex;
+  margin: 30px 0 50px 0;
+}
+
+.year{
+  font-size: 18px;
+  padding-left:5px;
+  margin-bottom: 20px;
+}
+
+.form-radio-label{
+  margin-right: 20px;
+  position: relative;
+  cursor: pointer;
+  padding-left: 25px;
+  text-align: left;
+  color: white;
+}
+
+.form-radio-label:hover i {
+  color: #8900e1;
+}
+
+.form-radio-label input {
+  width: auto;
+  opacity: 0.0001;
+  position: absolute;
+  left: 0.25rem;
+  top: 0.25rem;
+  margin: 0;
+  padding: 0;
+}
+
+.form-radio-button {
+  position: absolute;
+  left: 0;
+  cursor: pointer;
+  display: block;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  color: #f2f2f2;
+}
+
+.form-radio-button::before,
+.form-radio-button::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 1rem;
+  height: 1rem;
+  transition: transform 0.28s ease, color 0.28s ease;
+  border-radius: 50%;
+  border: 0.125rem solid currentColor;
+  will-change: transform, color;
+}
+
+.form-radio-button::after {
+  transform: scale(0);
+  background-color: white;
+  border-color: none;
+}
+
+.form-radio-field:checked ~ .form-radio-button::after {
+  transform: scale(0.5);
+}
+
+.form-radio-field:checked ~ .form-radio-button::before {
+  color: white;
+}
+
 .form-label{
   color:#f2f2f2; 
   font-weight: normal;
@@ -68,8 +142,7 @@ body {
 }
 
 .form-hint{
-  font-size: 12px;
-  color: #f2f2f2;
+  font-size:small;
   margin-top:10px;
 }
 
