--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -49,14 +49,14 @@ body {
   width:300px;
 }
 
-.form-control:focus,.form-control:valid {
+.form-control:focus,.form-control:valid,.form-control:invalid {
   color: white;
   outline:none;
 }
 
 .form-radio-group{
   display: flex;
-  margin: 30px 0 50px 0;
+  margin: 0 0 50px 0;
 }
 
 .year{
@@ -141,16 +141,32 @@ body {
   -webkit-transition:0.2s ease all;
 }
 
+.form-hint-email{
+  font-size:small;
+  margin-top:10px;
+  display: none;
+  color:#e86c00;
+}
+
 .form-hint{
   font-size:small;
   margin-top:10px;
+  display: none;
 }
 
-input:focus ~ label, input:valid ~ label 		{
+input::placeholder{
+  color: transparent;
+}
+
+input:focus ~ label, input:valid ~ label, input:invalid:not(:placeholder-shown)~label	{
   top:-20px;
   font-size:14px;
   color: white;
   font-weight: normal;
+}
+
+input:invalid:not(:placeholder-shown)~label	{
+  color: #e86c00;
 }
 
 .bar 	{ position:relative; display:block; width:315px; }
@@ -174,6 +190,10 @@ input:focus ~ label, input:valid ~ label 		{
 
 input:focus ~ .bar:before, input:focus ~ .bar:after {
   width:50%;
+}
+
+input:invalid:not(:placeholder-shown) ~ .bar:before, input:invalid:not(:placeholder-shown) ~ .bar:after {
+  background:#e86c00; 
 }
 
 .highlight {
@@ -205,119 +225,20 @@ input:focus ~ .highlight {
   to 	{ width:0; background:transparent; }
 }
 
-.form-select {
-  position: relative;
-  margin-bottom:45px;
-  width: 310px;
-}
-
-.form-element-bar {
-  position: relative;
-  height: 1px;
-  background: #f2f2f2;
+input[type="email"]:invalid:not(:placeholder-shown) ~ .form-hint-email{
   display: block;
 }
 
-.form-element-bar::after {
-  content: "";
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  background: white;
-  height: 1.5px;
+input[type="password"]:invalid:focus:not(:placeholder-shown) ~ .form-hint{
   display: block;
-  transform: rotateY(90deg);
-  transition: transform 0.28s ease;
-  will-change: transform;
 }
 
-.form-element-label {
-  position: absolute;
-  top:10px;
-  line-height: 1.5rem;
-  pointer-events: none;
-  padding-left: 5px;
-  z-index: 1;
-  font-size: 18px;
-  font-weight: normal;
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  margin: 0;
-  color: #f2f2f2;
-  transform: translateY(-50%);
-  transform-origin: left center;
-  transition: transform 0.28s ease, color 0.28s linear, opacity 0.28s linear;
-  will-change: transform, color, opacity;
-}
-
-.form-element-field {
-  outline: none;
+input[type="password"]:valid:focus:not(:placeholder-shown) ~ .form-hint{
   display: block;
-  background: none;
-  padding: 0.125rem 0.125rem 0.0625rem;
-  font-size: 18px;
-  border: 0 solid transparent;
-  line-height: 1.5;
-  width: 100%;
-  color: white;
-  box-shadow: none;
-  opacity: 0.001;
-  transition: opacity 0.28s ease;
-  will-change: opacity;
 }
 
-.form-element-field::placeholder {
-  color: #a6a6a6;
-  transform: scale(0.9);
-  transform-origin: left top;
-}
-
-.form-element-field:focus ~ .form-element-bar::after {
-  transform: rotateY(0deg);
-}
-
-.form-element-field:focus {
-  opacity: 1;
-}
-
-.form-element-field:focus ~ .form-element-label {
-  transform: translateY(-100%) translateY(-0.5em) translateY(-2px) scale(0.9);
-  cursor: pointer;
-  pointer-events: auto;
-  font-weight: normal;
-  color: white;
-}
-
-.form-element-bar::after {
-  background: white;
-}
-
-select.form-element-field {
-  -webkit-appearance: none;
-  -moz-appearance: none;
-  appearance: none;
-  cursor: pointer;
-}
-
-.form-select .form-element-bar::before {
-  content: "";
-  position: absolute;
-  height: 0.5em;
-  width: 0.5em;
-  border-bottom: 1px solid #f2f2f2;
-  border-right: 1px solid #f2f2f2;
+input[type="password"]:valid:not(:placeholder-shown) ~ .form-hint{
   display: block;
-  right: 0.5em;
-  bottom: 0;
-  transition: transform 0.28s ease;
-  transform: translateY(-100%) rotateX(0deg) rotate(45deg);
-  will-change: transform;
-}
-
-.form-select select:focus ~ .form-element-bar::before {
-  transform: translateY(-50%) rotateX(180deg) rotate(45deg);
 }
 
 input[type="submit"] {
