--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -272,6 +272,11 @@ input[type="submit"]:hover{
   flex-direction: column;
 }
 
+.course-page .popup-content {
+  left: 2% !important;
+  width: 96% !important;
+}
+
 .course-card{
   margin: 50px;
   background-color: rgba(242,242,242,0.5);
