--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -313,3 +313,9 @@ text-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   align-items: baseline;
   width: 100%;
 }
+
+.form-container-logout{
+  position: fixed;
+  right: 20px;
+  top: 20px;
+}
