--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,14 +1,18 @@
-@import url('https://fonts.googleapis.com/css?family=Montserrat&display=swap');
+@import url("https://fonts.googleapis.com/css?family=Montserrat&display=swap");
 
 body {
-  background:
-    linear-gradient(0deg,rgba(87,6,140,0.9),rgba(87,6,140,0.9)),
-    url('https://img.wallpapersafari.com/desktop/1920/1080/37/80/mHCT7n.jpg');
-  background-size:contain;
+  background: linear-gradient(
+      0deg,
+      rgba(87, 6, 140, 0.9),
+      rgba(87, 6, 140, 0.9)
+    ),
+    url("https://img.wallpapersafari.com/desktop/1920/1080/37/80/mHCT7n.jpg");
+  background-size: contain;
   background-position: center;
 }
 
-.form-container,.form-container-login{
+.form-container,
+.form-container-login {
   margin: auto;
   width: 100%;
   align-items: center;
@@ -16,13 +20,13 @@ body {
   display: flex;
 }
 
-.form-container-login{
+.form-container-login {
   margin-top: 100px;
 }
 
-.registerForm{
-  font-family: 'Montserrat', sans-serif;
-  color:white;
+.registerForm {
+  font-family: "Montserrat", sans-serif;
+  color: white;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -30,42 +34,44 @@ body {
   margin: 100px 0;
 }
 
-.form-group{
+.form-group {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  position:relative; 
-  margin-bottom:45px; 
+  position: relative;
+  margin-bottom: 45px;
 }
 
-.form-control{
+.form-control {
   background: none;
   border-bottom: 1px solid #f2f2f2;
-  border-top:none ;
+  border-top: none;
   border-left: none;
   border-right: none;
-  font-size:18px;
-  padding:10px 10px 10px 5px;
-  width:300px;
+  font-size: 18px;
+  padding: 10px 10px 10px 5px;
+  width: 300px;
 }
 
-.form-control:focus,.form-control:valid,.form-control:invalid {
+.form-control:focus,
+.form-control:valid,
+.form-control:invalid {
   color: white;
-  outline:none;
+  outline: none;
 }
 
-.form-radio-group{
+.form-radio-group {
   display: flex;
   margin: 0 0 50px 0;
 }
 
-.year{
+.year {
   font-size: 18px;
-  padding-left:5px;
+  padding-left: 5px;
   margin-bottom: 20px;
 }
 
-.form-radio-label{
+.form-radio-label {
   margin-right: 20px;
   position: relative;
   cursor: pointer;
@@ -128,125 +134,149 @@ body {
   color: white;
 }
 
-.form-label{
-  color:#f2f2f2; 
+.form-label {
+  color: #f2f2f2;
   font-weight: normal;
-  font-size:18px;
-  position:absolute;
-  pointer-events:none;
-  left:5px;
-  top:10px;
-  transition:0.2s ease all; 
-  -moz-transition:0.2s ease all; 
-  -webkit-transition:0.2s ease all;
+  font-size: 18px;
+  position: absolute;
+  pointer-events: none;
+  left: 5px;
+  top: 10px;
+  transition: 0.2s ease all;
+  -moz-transition: 0.2s ease all;
+  -webkit-transition: 0.2s ease all;
 }
 
-.form-hint-email{
-  font-size:small;
-  margin-top:10px;
+.form-hint-email {
+  font-size: small;
+  margin-top: 10px;
   display: none;
-  color:#e86c00;
+  color: #e86c00;
 }
 
-.form-hint{
-  font-size:small;
-  margin-top:10px;
+.form-hint {
+  font-size: small;
+  margin-top: 10px;
   display: none;
 }
 
-input::placeholder{
+input::placeholder {
   color: transparent;
 }
 
-input:focus ~ label, input:valid ~ label, input:invalid:not(:placeholder-shown)~label	{
-  top:-20px;
-  font-size:14px;
+input:focus ~ label,
+input:valid ~ label,
+input:invalid:not(:placeholder-shown) ~ label {
+  top: -20px;
+  font-size: 14px;
   color: white;
   font-weight: normal;
 }
 
-input:invalid:not(:placeholder-shown)~label	{
+input:invalid:not(:placeholder-shown) ~ label {
   color: #e86c00;
 }
 
-.bar 	{ position:relative; display:block; width:315px; }
-.bar:before, .bar:after 	{
-  content:'';
-  height:2px; 
+.bar {
+  position: relative;
+  display: block;
+  width: 315px;
+}
+.bar:before,
+.bar:after {
+  content: "";
+  height: 2px;
   width: 0;
-  bottom:0.5px; 
-  position:absolute;
-  background:white; 
-  transition:0.2s ease all; 
-  -moz-transition:0.2s ease all; 
-  -webkit-transition:0.2s ease all;
+  bottom: 0.5px;
+  position: absolute;
+  background: white;
+  transition: 0.2s ease all;
+  -moz-transition: 0.2s ease all;
+  -webkit-transition: 0.2s ease all;
 }
 .bar:before {
-  left:50%;
+  left: 50%;
 }
 .bar:after {
-  right:50%; 
+  right: 50%;
 }
 
-input:focus ~ .bar:before, input:focus ~ .bar:after {
-  width:50%;
+input:focus ~ .bar:before,
+input:focus ~ .bar:after {
+  width: 50%;
 }
 
-input:invalid:not(:placeholder-shown) ~ .bar:before, input:invalid:not(:placeholder-shown) ~ .bar:after {
-  background:#e86c00; 
+input:invalid:not(:placeholder-shown) ~ .bar:before,
+input:invalid:not(:placeholder-shown) ~ .bar:after {
+  background: #e86c00;
 }
 
 .highlight {
-  position:absolute;
-  height:60%; 
-  width:300px; 
-  top:25%; 
-  left:0;
-  pointer-events:none;
-  opacity:0.5;
+  position: absolute;
+  height: 60%;
+  width: 300px;
+  top: 25%;
+  left: 0;
+  pointer-events: none;
+  opacity: 0.5;
 }
 
 input:focus ~ .highlight {
-  -webkit-animation:inputHighlighter 0.3s ease;
-  -moz-animation:inputHighlighter 0.3s ease;
-  animation:inputHighlighter 0.3s ease;
+  -webkit-animation: inputHighlighter 0.3s ease;
+  -moz-animation: inputHighlighter 0.3s ease;
+  animation: inputHighlighter 0.3s ease;
 }
 
 @-webkit-keyframes inputHighlighter {
-	from { background:#8900e1; }
-  to 	{ width:0; background:transparent; }
+  from {
+    background: #8900e1;
+  }
+  to {
+    width: 0;
+    background: transparent;
+  }
 }
 @-moz-keyframes inputHighlighter {
-	from { background:#8900e1; }
-  to 	{ width:0; background:transparent; }
+  from {
+    background: #8900e1;
+  }
+  to {
+    width: 0;
+    background: transparent;
+  }
 }
 @keyframes inputHighlighter {
-	from { background:#8900e1; }
-  to 	{ width:0; background:transparent; }
+  from {
+    background: #8900e1;
+  }
+  to {
+    width: 0;
+    background: transparent;
+  }
 }
 
-input[type="email"]:invalid:not(:placeholder-shown) ~ .form-hint-email{
+input[type="email"]:invalid:not(:placeholder-shown) ~ .form-hint-email {
   display: block;
 }
 
-input[type="password"]:invalid:focus:not(:placeholder-shown) ~ .form-hint{
+input[type="password"]:invalid:focus:not(:placeholder-shown) ~ .form-hint {
   display: block;
 }
 
-input[type="password"]:valid:focus:not(:placeholder-shown) ~ .form-hint{
+input[type="password"]:valid:focus:not(:placeholder-shown) ~ .form-hint {
   display: block;
 }
 
-input[type="password"]:valid:not(:placeholder-shown) ~ .form-hint{
+input[type="password"]:valid:not(:placeholder-shown) ~ .form-hint {
   display: block;
 }
 
 input[type="submit"] {
   border: none;
-  font-family: 'Montserrat', sans-serif;
-  color:white;
+  font-family: "Montserrat", sans-serif;
+  color: white;
   letter-spacing: 1px;
-  color:white;
+  color: white;
   background-color: #330662;
   border-style: none;
   text-align: center;
@@ -256,18 +286,18 @@ input[type="submit"] {
   outline: none;
 }
 
-input[type="submit"]:hover{
+input[type="submit"]:hover {
   font-weight: bold;
   font-size: 14px;
-  background-color:  #8900e1;
+  background-color: #8900e1;
   transition: 300ms ease;
 }
 
-.course-page{
-  font-family: 'Montserrat', sans-serif;
+.course-page {
+  font-family: "Montserrat", sans-serif;
   color: white;
   padding: 50px;
-  margin: 30px 20px 30px  20px;
+  margin: 30px 20px 30px 20px;
   display: flex;
   flex-direction: column;
 }
@@ -277,42 +307,51 @@ input[type="submit"]:hover{
   width: 96% !important;
 }
 
-.course-card{
+.course-card {
   margin: 50px;
-  background-color: rgba(242,242,242,0.5);
-  padding: 40px  50px 40px 50px;
+  background-color: rgba(242, 242, 242, 0.5);
+  padding: 40px 50px 40px 50px;
   border-radius: 25px;
 }
 
-.course-card:hover{
+.course-card:hover {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   margin-top: 30px;
-  background-color: rgba(242,242,242,0.6);
+  background-color: rgba(242, 242, 242, 0.6);
   transition: 300ms ease;
   cursor: pointer;
 }
 
-.metaData{
+.metaData {
   display: flex;
   flex-direction: row;
 }
 
-.metaInfo{
-  margin-right:20px ;
+.metaInfo {
+  margin-right: 20px;
   padding-right: 20px;
   font-weight: bolder;
   border-right: 1px solid white;
 }
 
-a:link {color: white;text-decoration: none;}
-a:visited {color: #220337;text-decoration: underline;}
-a:hover {color: white;text-decoration: underline;}
+a:link {
+  color: white;
+  text-decoration: none;
+}
+a:visited {
+  color: #220337;
+  text-decoration: underline;
+}
+a:hover {
+  color: white;
+  text-decoration: underline;
+}
 a:active {
   color: #330662;
-text-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  text-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
-.reg-log{
+.reg-log {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -320,24 +359,26 @@ text-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   width: 100%;
 }
 
-.form-container-logout{
+.form-container-logout {
   position: fixed;
   right: 20px;
   top: 20px;
 }
 
-.contain
-{
-  display:flex;
+.contain {
+  display: flex;
 }
 
-.searchComp
-{
+.searchComp {
   flex: 1;
 }
 
-.calenderComp
-{
+.calenderComp {
   position: relative;
-  flex:1;
+  flex: 1;
+}
+.showButton {
+  margin-left: auto;
+  position: relative;
+  flex: 1;
 }
