--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -10,6 +10,7 @@ body {
   background-size: contain;
   background-position: center;
   background-attachment: fixed;
+  width: 100%;
 }
 
 .form-container,
